Добавить резервное копирование задач в файл. Спринт 7. UPD 17.10 1. Добавить резервное копирование задач в файл. 2. Создать тесты для класса FileBackedTaskManager. 3. Добавить метод для обновления счётчика id. 4. Добавить id подзадач к эпикам. 5. Вынести отдельный класс конвертер. 6. Доработать метод getDefault в классе Manager под класс FileBackedTaskManager. 7. Поправить ошибку NPE в тесте shouldLoadListOfTask() GitHub. 8. Переписать тесты на абстрактный класс.